# pure-readfile

./: default.nix  pure-readfile.cabal
src/Pure/: ReadFile.hs
