name:                pure-readfile
version:             0.7.0.0
synopsis:
homepage:            github.com/grumply/pure-readfile
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base >= 4.8 && < 5,
    pure-default >= 0.7 && < 1,
    pure-lifted >= 0.7 && < 1,
    pure-txt >= 0.7 && < 1,
    bytestring

  if (impl(ghcjs))
    build-depends:
      ghcjs-base >= 0.2 && < 0.3

  hs-source-dirs: src

  exposed-modules:
    Pure.ReadFile

  default-extensions:
    OverloadedStrings
    ScopedTypeVariables

  default-language: Haskell2010