name:                pure-readfile
version:             0.7.0.0
synopsis:
homepage:            github.com/grumply/pure-readfile
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base >= 4.8 && < 5,
    pure-lifted >= 0.7 && < 1,
    pure-txt >= 0.7 && < 1,
    pure-json >= 0.7 && <1,
    text

  hs-source-dirs: src

  exposed-modules:
    Pure.ReadFile

  default-extensions:
    OverloadedStrings
    ScopedTypeVariables

  default-language: Haskell2010
