name:                pure-readfile
version:             0.8.0.0
homepage:            purehs.org/doc/pure-readfile
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-readfile.git

library
  build-depends:
    base,
    pure-lifted,
    pure-txt,
    pure-json,
    text,
    hashable

  hs-source-dirs: src

  exposed-modules:
    Pure.ReadFile

  default-extensions:
    OverloadedStrings
    ScopedTypeVariables

  default-language: Haskell2010
